[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menu/menu.gd" type="Script" id=1]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonHost" type="Button" parent="."]
margin_left = 384.0
margin_top = 184.0
margin_right = 640.0
margin_bottom = 248.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="."]
margin_left = 384.0
margin_top = 272.0
margin_right = 640.0
margin_bottom = 336.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetIP" type="LineEdit" parent="."]
margin_left = 384.0
margin_top = 392.0
margin_right = 640.0
margin_bottom = 416.0
placeholder_text = "Target IP adress..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="."]
margin_left = 384.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 384.0
placeholder_text = "Username..."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
